# Arm-Control

./: README.md
mcr_line_contour_detector/: CMakeLists.txt  README.md  package.xml
mcr_line_contour_detector/common/include/mcr_line_contour_detector/: line_contour_finder.h
mcr_line_contour_detector/common/src/: line_contour_finder.cpp
mcr_line_contour_detector/ros/config/: topics.yaml
mcr_line_contour_detector/ros/include/mcr_line_contour_detector/: line_contour_finder_ros.h
mcr_line_contour_detector/ros/launch/: line_contour_detector.launch  logging.launch
mcr_line_contour_detector/ros/src/codes/: line_contour_finder_ros.cpp  rviz_visualization_marker.cpp
mcr_line_contour_detector/ros/src/nodes/: line_contour_detector_node.cpp  line_contour_finder_node.cpp
mir_compute_transform/: CMakeLists.txt  package.xml  setup.py
mir_compute_transform/ros/launch/: compute_transform.launch
mir_compute_transform/ros/scripts/: compute_transform_node
mir_compute_transform/ros/src/mir_compute_transform_ros/: compute_transform.py
mir_path_generator/: CMakeLists.txt  package.xml  setup.py
mir_path_generator/ros/csv/: pattern.csv  pattern_line.csv  pattern_sine.csv
mir_path_generator/ros/launch/: path_generator.launch
mir_path_generator/ros/scripts/: path_generator_node
mir_path_generator/ros/src/mir_path_generator_ros/: new_path_generator.py  path_generator.py
mir_path_transformer/: CMakeLists.txt  package.xml  setup.py
mir_path_transformer/ros/launch/: path_transformer.launch
mir_path_transformer/ros/scripts/: path_transformer_node  path_transformer_with_sampler_node
mir_path_transformer/ros/src/mir_path_transformer_ros/: path_transformer.py  path_transformer_with_sampler.py
mir_rockin_control_fbm/: CMakeLists.txt  package.xml
mir_rockin_control_fbm_launcher/: CMakeLists.txt  README.md  package.xml  setup.py
mir_rockin_control_fbm_launcher/doc/: control_functionality.graphml
mir_rockin_control_fbm_launcher/ros/launch/: rockin_control_fbm.launch
mir_rockin_control_fbm_launcher/ros/scripts/: linear_interpolator_demo_node
mir_rockin_control_fbm_launcher/ros/src/mir_rockin_control_fbm_launcher_ros/: linear_interpolator_demo.py
