<?xml version="1.0"?>
<package>
  <name>mir_path_transformer</name>
  <version>0.1.0</version>
  <description>
    This component provides functionality to transform a given path from reference to 
    target frame.
  </description>
  <license>GPLv3</license>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>
  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
