<?xml version="1.0"?>
<package>
  <name>mir_rockin_control_fbm</name>
  <version>0.1.0</version>
  <description>
  	This metapackage combines rockin control fbm 
  	related packages.
  </description>

  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>
  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mir_compute_transform</run_depend>
  <run_depend>mir_path_generator</run_depend>
  <run_depend>mir_path_transformer</run_depend>
  <run_depend>mir_rockin_control_fbm_launcher</run_depend>
  <run_depend>mir_trajectory_time_parameterizer</run_depend>
  <run_depend>mir_trajectory_time_parameterizer</run_depend>
  <run_depend>mcr_trajectory_generation</run_depend>
  <export>
    <metapackage/>
  </export>
</package>