<?xml version="1.0"?>
<package>
  <name>mir_rockin_control_fbm_launcher</name>
  <version>0.1.0</version>
  <description>
    This package provides launcher for rockin control functionality benchmark.
  </description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>
  <author email="youssef.youssef@smail.inf.h-brs.de">Youssef Mahmoud</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>